src/objects/Order_Gift__c.object
<CustomObject>
    <fields>
        <fullName>Gift_Redemption_Number__c</fullName>
        <externalId>true</externalId>
        <label>Gift Redemption Number</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Internal_Remarks__c</fullName>
        <label>Internal Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NRIC_Collect_on_Behalf__c</fullName>
        <label>NRIC (Collect on Behalf)</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Collect_on_Behalf__c</fullName>
        <label>Name (Collect on Behalf)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Quantity_Formula__c</fullName>
        <formula>Order_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Quantity__c</fullName>
        <label>Order Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_Gift__c</fullName>
        <label>Promotion Gift</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redemption_Date__c</fullName>
        <label>Redemption Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Redemption_Quantity__c</fullName>
        <label>Redemption Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Redemption_Remarks__c</fullName>
        <label>Redemption Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Redemption_Number__c</fullName>
        <displayFormat>GIFT-{000000}</displayFormat>
        <label>Salesforce Redemption Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Telephone_Collect_on_Behalf__c</fullName>
        <label>Telephone (Collect on Behalf)</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Order Gift</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OG-{00000}</displayFormat>
        <label>Order Gift Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Gifts</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Redemption_date_must_be_specified</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNULL( Redemption_Quantity__c )) &amp;&amp; 
ISNULL( Redemption_Date__c )</errorConditionFormula>
        <errorDisplayField>Redemption_Date__c</errorDisplayField>
        <errorMessage>Redemption date must be specified when redemption quantity is entered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Redemption_qty_cannot_be_greater_than_or</fullName>
        <active>true</active>
        <errorConditionFormula>Redemption_Quantity__c &gt; Order_Quantity__c</errorConditionFormula>
        <errorDisplayField>Redemption_Quantity__c</errorDisplayField>
        <errorMessage>Redemption quantity cannot be greater than Order quantity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Redemption_qty_must_be_specified</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNULL( Redemption_Date__c )) &amp;&amp; 
ISNULL( Redemption_Quantity__c )</errorConditionFormula>
        <errorDisplayField>Redemption_Quantity__c</errorDisplayField>
        <errorMessage>Redemption quantity must be specified when redemption date is entered</errorMessage>
    </validationRules>
</CustomObject>